--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+
+* {
+    box-sizing: border-box;
+  }
+
+
 .container {
     width: 375px;
     height: 667px;
+    background-color: #E5E5E5;
+
 }
 
 header {    
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
     position: fixed;
     left: 0;
-    top: 0;
+    top: 0;  
 }
 
 header,
@@ -41,10 +49,27 @@ footer {
 
 .text-container {
     width: 375px;
-    height: 600px;
-    background-color: #E5E5E5;
+    height: 507px;
+    margin-top: 80px;
 }
 
+.text {
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+}
+
+.text p {
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  margin-left: 8px;
+  margin-right: 9px;
+  color: #000000;
+}
+
+.horario {
+  color: #AAAAAA;
+}
 
 footer {
     box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
@@ -143,5 +168,38 @@ footer {
   }
 
   .hidden {
-    opacity: 0;
+    display: none;
   }
+
+  .status,
+  .message {
+    width:375px;
+    height: 40px;
+    margin-bottom: 4px;
+    border-radius: 2px;
+  }
+
+  .private-message {
+    width:375px;
+    height: 63px;
+    margin-bottom: 4px;
+    border-radius: 2px;
+    background-color: #FFDEDE;
+  }
+
+  .status {
+    background-color: #DCDCDC;
+  }
+
+  .message {
+    background-color:#FFFFFF;
+  }
+
+
+  .margem {
+    width: 375px;
+    height: 26px;
+  }
+
+ 
+  
