--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
 * {
     box-sizing: border-box;
   }
@@ -48,13 +47,26 @@ text-align: center;
   margin-top: 15px;
 }
 
+.loader img {
+  width: 90px;
+  height: 90px;
+}
+
+.loader p{
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px;
+  display: flex;
+  justify-content: center;
+  margin-top: 12px;
+}
+
 .selecionado {
   pointer-events: none;
 }
 
 
 .entrar p {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;  
   font-weight: 400;
   font-size: 18px;
   line-height: 25px;
@@ -255,12 +267,6 @@ footer {
 
   .message {
     background-color:#FFFFFF;
-  }
-
-
-  .margem {
-    width: 375px;
-    height: 26px;
   }
 
  
